--- a/testing_containers/localuser_sudo_environment/Dockerfile
+++ b/testing_containers/localuser_sudo_environment/Dockerfile
@@ -1,6 +1,7 @@
 # Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
 
-FROM python:3.9-buster
+FROM python:3.9-bookworm
+ARG PIP_INDEX_URL
 
 # Let our tests know that we"re in an environment that can run the sudo
 # tests
@@ -8,9 +9,7 @@ ENV OPENJD_TEST_SUDO_TARGET_USER=targetuser
 ENV OPENJD_TEST_SUDO_SHARED_GROUP=sharedgroup
 ENV OPENJD_TEST_SUDO_DISJOINT_USER=disjointuser
 ENV OPENJD_TEST_SUDO_DISJOINT_GROUP=disjointgroup
-
-# Use a docker volume to mount the root of the repo to this directory
-WORKDIR /code
+ENV PIP_INDEX_URL=$PIP_INDEX_URL
 
 # We set up two users for our tests:
 #  1) hostuser -- the user that will be running the pytests.
@@ -21,20 +20,25 @@ WORKDIR /code
 #   hostuser: hostuser, sharedgroup
 #   targetuser: targetuser, sharedgroup
 #   disjointuser: disjointuser, disjointgroup
-RUN apt-get update && apt-get install sudo && \
+RUN apt-get update && apt-get install -y sudo && \
+    # Clean up apt cache
     rm -rf /var/lib/apt/lists/* && \
+    apt-get clean && \
+    # Set up OS users and groups
     addgroup ${OPENJD_TEST_SUDO_SHARED_GROUP} &&  \
     useradd -ms /bin/bash -G ${OPENJD_TEST_SUDO_SHARED_GROUP} ${OPENJD_TEST_SUDO_TARGET_USER} && \
     useradd -ms /bin/bash -G ${OPENJD_TEST_SUDO_SHARED_GROUP} hostuser && \
+    # Setup sudoers rules
     echo "hostuser ALL=(${OPENJD_TEST_SUDO_TARGET_USER},hostuser) NOPASSWD: ALL" > /etc/sudoers.d/hostuser && \
     addgroup ${OPENJD_TEST_SUDO_DISJOINT_GROUP} && \
     useradd -ms /bin/bash -G ${OPENJD_TEST_SUDO_DISJOINT_GROUP} ${OPENJD_TEST_SUDO_DISJOINT_USER} && \
-    chmod 777 /code
-
-WORKDIR /home/hostuser
-
-COPY --chown=hostuser:hostuser run_tests.sh /home/hostuser/
+    # Install hatch (for setting up environment and running tests)
+    pip install hatch
 
 USER hostuser
 
-CMD ["/bin/sh", "-c", "./run_tests.sh"]
+COPY --chown=hostuser:hostuser . /code/
+WORKDIR /code
+RUN hatch env create
+
+CMD ["hatch", "run", "test", "--no-cov"]
