feat: directly signal session action processes using CAP_KILL (#196)
Signed-off-by: Josh Usiskin <56369778+jusiskin@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -148,6 +148,9 @@ addopts = [
     "--numprocesses=auto",
     "--timeout=30"
 ]
+markers = [
+  "requires_cap_kill: tests that require CAP_KILL Linux capability",
+]
 
 
 [tool.coverage.run]
@@ -172,6 +175,9 @@ fail_under = 79
   "src/openjd/sessions/_win32/*.py",
   "src/openjd/sessions/_scripts/_windows/*.py",
   "src/openjd/sessions/_windows*.py"
+]
+"sys_platform != 'linux'" = [
+  "src/openjd/sessions/_linux/*.py",
 ]
 
 [tool.coverage.coverage_conditional_plugin.rules]
